--- a/design/templates/OpenGame/login_menu.tpl.html
+++ b/design/templates/OpenGame/login_menu.tpl.html
@@ -20,26 +20,35 @@
 </div>
 <!-- ENDIF -->
 
-<div id="log_menu">
-  <a href="login.php{LANG}{referral}">{L_log_login_page}</a> ::
-  <a href="reg.php{LANG}{referral}">{L_log_reg}</a> ::
-  <a href="lostpassword.php{LANG}{referral}">{L_PasswordLost}</a>
-  <br />
+<div id="login_menu">
+  <div class="menu_line">
+    <a href="login.php{LANG}{referral}">{L_log_login_page}</a>
+    <a href="reg.php{LANG}{referral}">{L_log_reg}</a>
+    <a href="lostpassword.php{LANG}{referral}">{L_PasswordLost}</a>
+  </div>
 
-  <!-- IF URL_RULES -->
-  <a href="{URL_RULES}">{L_log_rules}</a> ::
-  <!-- ENDIF -->
-  <a href="server_info.php{LANG}">{L_log_cred}</a> ::
-  <a href="stat.php{LANG}">{L_log_stat_menu}</a>
-  <!-- IF URL_FAQ -->
-  :: <a href="{URL_FAQ}">{L_log_faq}</a>
-  <!-- ENDIF -->
-  <br />
+  <div class="menu_line">
+    <!-- IF URL_RULES -->
+    <a href="{URL_RULES}">{L_log_rules}</a>
+    <!-- ENDIF -->
+    <!-- IF URL_FAQ -->
+    <a href="{URL_FAQ}">{L_log_faq}</a>
+    <!-- ENDIF -->
+    <!-- IF URL_FORUM -->
+    <a href="{URL_FORUM}">{L_log_forums}</a>
+    <!-- ENDIF -->
+  </div>
 
-  <a href="announce.php{LANG}">{L_log_news}</a> ::
-  <!-- IF URL_FORUM -->
-  <a href="{URL_FORUM}">{L_log_forums}</a> ::
-  <!-- ENDIF -->
-  <a href="banned.php{LANG}">{L_log_banned}</a> ::
-  <a href="index.php{LANG}{$SEPARATOR}page=contact">{L_log_contacts}</a>
+
+  <div class="menu_line">
+    <a href="server_info.php{LANG}">{L_log_cred}</a>
+    <a href="announce.php{LANG}">{L_log_news}</a>
+  </div>
+
+
+  <div class="menu_line">
+    <a href="stat.php{LANG}">{L_log_stat_menu}</a>
+    <a href="banned.php{LANG}">{L_log_banned}</a>
+    <a href="index.php{LANG}{$SEPARATOR}page=contact">{L_log_contacts}</a>
+  </div>
 </div>
