INT-feat-39a10.13: Added Astrocartography tip on research page

--- a/design/templates/OpenGame/buildings_builds.tpl.html
+++ b/design/templates/OpenGame/buildings_builds.tpl.html
@@ -31,6 +31,9 @@ language = {
   speed: '{LA_sys_ship_speed}',
   consumption: '{LA_sys_ship_consumption}',
   capacity: '{LA_sys_ship_capacity}',
+
+  'sys_expeditions': '{LA_sys_expeditions}',
+  'sys_colonies': '{LA_sys_colonies}',
 };
 
 planet = {
@@ -296,14 +299,19 @@ var que_id = '{QUE_ID}';
                   'capacity': '{resource.ACTUAL_CAPACITY}',
 
                   'level': '{resource.LEVEL}',
-                  'metal': '{resource.R901}',
+                  'sys_metal': '{resource.R901}',
                   'metal_diff': '{resource.D901}',
-                  'crystal': '{resource.R902}',
+                  'sys_crystal': '{resource.R902}',
                   'crystal_diff': '{resource.D902}',
-                  'deuterium': '{resource.R903}',
+                  'sys_deuterium': '{resource.R903}',
                   'deuterium_diff': '{resource.D903}',
-                  'energy': '{resource.R904}',
+                  'sys_energy': '{resource.R904}',
                   'energy_diff': '{resource.D904}',
+
+                  'sys_colonies': '{resource.RCOLONIES_MAX}',
+                  'sys_colonies_diff': '{resource.DCOLONIES_MAX}',
+                  'sys_expeditions': '{resource.REXPEDITIONS_MAX}',
+                  'sys_expeditions_diff': '{resource.DEXPEDITIONS_MAX}',
                 },
               <!-- END resource -->
               ]
