--- a/design/templates/OpenGame/imperium.tpl.html
+++ b/design/templates/OpenGame/imperium.tpl.html
@@ -33,7 +33,10 @@
   </tr>
 
   <tr class="c_c">
-    <td width="{$CELL_HEADER}">{L_sys_colonies} {COLONIES_CURRENT}/{COLONIES_MAX}</td>
+    <td width="{$CELL_HEADER}">
+      {L_sys_colonies} {COLONIES_CURRENT}/{COLONIES_MAX}<br />
+      {L_sys_expeditions} {EXPEDITIONS_CURRENT}/{EXPEDITIONS_MAX}
+    </td>
     <!-- INCLUDE planet_list -->
   </tr>
 
