--- a/design/templates/OpenGame/novapedia.tpl.html
+++ b/design/templates/OpenGame/novapedia.tpl.html
@@ -31,7 +31,7 @@
     <td colspan="3">
       <ul>
         <!-- BEGIN require -->
-        <li style="margin: 0; padding: 0;"><span class="<!-- IF require.REQUEREMENTS_MET -->negative<!-- ELSE -->positive<!-- ENDIF -->">{require.NAME}</span><!-- IF require.LEVEL_REQUIRE -->&nbsp;{require.LEVEL_BASIC}<!-- IF require.LEVEL_BONUS --><span class="bonus">+{require.LEVEL_BONUS}</span><!-- ENDIF -->/{require.LEVEL_REQUIRE}<!-- ENDIF --></li>
+        <li style="margin: 0; padding: 0;"><span class="<!-- IF require.REQUEREMENTS_MET -->positive<!-- ELSE -->negative<!-- ENDIF -->">{require.NAME}</span><!-- IF require.LEVEL_REQUIRE -->&nbsp;{require.LEVEL_BASIC}<!-- IF require.LEVEL_BONUS --><span class="bonus">+{require.LEVEL_BONUS}</span><!-- ENDIF -->/{require.LEVEL_REQUIRE}<!-- ENDIF --></li>
         <!-- END require -->
       </ul>
     </td>
